Closed
Bug 1457286
Opened 7 years ago
Closed 7 years ago
Cannot find in display: contents subtrees.
Categories
(Core :: Find Backend, defect, P1)
Core
Find Backend
Tracking
()
RESOLVED
FIXED
mozilla62
| Tracking | Status | |
|---|---|---|
| firefox62 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
Details
Attachments
(2 files)
No description provided.
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → emilio
| Comment hidden (mozreview-request) |
Updated•7 years ago
|
Attachment #8971372 -
Attachment mime type: text/plain → text/html
Comment 2•7 years ago
|
||
The testcase seems to work fine for me... what's the STR?
| Assignee | ||
Comment 3•7 years ago
|
||
(In reply to Mats Palmgren (:mats) from comment #2)
> The testcase seems to work fine for me... what's the STR?
Try to find across the boundary, like: "Find me and", or "me please".
Comment 4•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8971380 [details]
Bug 1457286: Teach nsFind about display: contents.
https://reviewboard.mozilla.org/r/240132/#review245966
Looks reasonable. Would be nice to have a regression tests for this...
Attachment #8971380 -
Flags: review?(mats) → review+
Comment 5•7 years ago
|
||
Ah, gotcha. That indeed doesn't work for me.
Comment 6•7 years ago
|
||
I think you can use something like window.find("me and me") to test this.
| Assignee | ||
Comment 7•7 years ago
|
||
(In reply to Mats Palmgren (:mats) from comment #6)
> I think you can use something like window.find("me and me") to test this.
Ah, nice one!
Btw, the tag name thing is so broken :(. You can't find "me and me" in...
<!doctype html>
<div>
Find me
<div style="display: inline;">
and me
</div>
please.
</div>
Either. I'll file followups.
Updated•7 years ago
|
Priority: -- → P1
Pushed by ecoal95@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/1f645546750f
Teach nsFind about display: contents. r=mats
Comment 9•7 years ago
|
||
Backed out for android mochitest failures on dom/base/test/test_find.html.
Push with failures: https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&filter-resultStatus=testfailed&filter-resultStatus=busted&filter-resultStatus=exception&fromchange=ded57fc8fd133485950be5f85ce9a1b5fae89667&tochange=466234a456b4348a076bed6704d82b0b05e3bdf1&filter-failure_classification_id=2&selectedJob=180772595
Failure log:
https://treeherder.mozilla.org/logviewer.html#?job_id=180772595&repo=mozilla-inbound&lineNumber=1091
Backout link: https://hg.mozilla.org/integration/mozilla-inbound/rev/466234a456b4348a076bed6704d82b0b05e3bdf1
Flags: needinfo?(emilio)
Comment 10•7 years ago
|
||
Pushed by ecoal95@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/dfa7b43a4a5e
Teach nsFind about display: contents. r=mats
| Assignee | ||
Updated•7 years ago
|
Flags: needinfo?(emilio)
Comment 11•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox62:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
You need to log in
before you can comment on or make changes to this bug.
Description
•