Bug 1457286: Teach nsFind about display: contents. r=mats

MozReview-Commit-ID: LODyc8yuuSs